--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .home-cover{
     background-color: black;
     color: white;
-    background-image: url(images/img\ detox.jpg);
+    background-image: url(./images/img\ detox.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
